--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="lib/jquery.mockjax-1.6.1.min.js"></script>
     <script src="lib/comeon.game-1.0.min.js"></script>
     <script src="mock/mock-api.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 <div class="ui one column center aligned page grid">
